syntax = "proto3";

package users.v1;

import "v1/messages/createUserRequest.message.proto";
import "v1/messages/createUserResponse.message.proto";

service UsersService {
  rpc CreateUser (CreateUserRequestMessage) returns (CreateUserResponseMessage);
}
